cleanup the test and add a failing case
it should not find exchanges with duplicate
flows but no actual links as used